--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: serif; 
 }
 .banner{
     width: 100%;
@@ -13,14 +13,14 @@
 .navbar{
     width: 85%;
     margin: auto;
-    padding: 35px 0;
+    padding: 25px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 50;
 }
 .logo{
-    width: 120px;
-    cursor: pointer;
+    width: 80px;
 }
 .navbar ul li{
     list-style: none;
@@ -48,8 +48,8 @@
 }
 .content{
     width: 100%;
-    position: absolute;
-    top: 25%;
+    position: relative;
+    top: 15%;
     transform: translateY(-50%);
     text-align: center;
     color: #fff;
